--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -13,31 +13,16 @@
     </div>
   </div>
 
-  <!-- Listing Card
-  <div class="row justify-content-center mb-4">
-    <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-      <div class="card shadow-sm mx-auto" style="max-width: 500px;">
-        <img src="<%= listing.image %>" class="card-img-top img-fluid rounded" alt="listing_image" style="object-fit: cover; height: auto;">
-        <div class="card-body text-center">
-          <p class="card-text">
-            &#8377; <b><%= listing.price.toLocaleString("en-IN") %></b><br>
-            <%= listing.location %><br>
-            <%= listing.country %>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
   <!-- Listing Card -->
 <div class="row justify-content-center mb-4">
   <div class="col-12 col-sm-10 col-md-8 col-lg-6">
     <div class="card shadow-sm mx-auto border-0" style="max-width: 500px; overflow: hidden; border-radius: 15px;">
       <img 
-        src="<%= listing.image %>" 
+        src="<%= listing.image.url %>" 
         class="card-img-top img-fluid" 
         alt="listing_image" 
-        style="object-fit: cover; width: 100%; height: auto;"
+        style="object-fit: cover;  width: 100%; 
+        height: 250px;"
       >
       
     </div>
@@ -59,7 +44,7 @@
   </div>
 </div>
 
-  <% if(currentuser&&  currentuser._id.equals(listing.owner._id)){ %>
+  <% if(currentuser&&  listing.owner._id.toString()===currentuser._id.toString()){ %>
   <!-- Edit & Delete Buttons -->
   <div class="row justify-content-center mb-4">
     <div class="col-auto d-flex gap-2 flex-wrap">
@@ -80,11 +65,30 @@
     <div class="col-12 col-md-8 col-lg-6">
       <h4 class="text-center mb-4">Leave a Review</h4>
       <form action="/listings/<%= listing.id %>/reviews" method="post" novalidate class="needs-validation" style="max-width: 500px; margin: auto;">
-        <div class="mb-3">
+        <!-- <div class="mb-3">
           <label for="rating" class="form-label">Rating</label>
           <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range">
-        </div>
-        <div class="mb-3">
+        </div> -->
+        
+      <div class="mb-3">
+          <fieldset class="starability-slot">
+              
+          <legend>Rating:</legend>
+          <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+          <input type="radio" id="second-rate1" name="review[rating]" value="1" />
+          <label for="second-rate1" title="Terrible">1 star</label>
+          <input type="radio" id="second-rate2" name="review[rating]" value="2" />
+           <label for="second-rate2" title="Not good">2 stars</label>
+          <input type="radio" id="second-rate3" name="review[rating]" value="3" />
+          <label for="second-rate3" title="Average">3 stars</label>
+          <input type="radio" id="second-rate4" name="review[rating]" value="4" />
+          <label for="second-rate4" title="Very good">4 stars</label>
+          <input type="radio" id="second-rate5" name="review[rating]" value="5" />
+          <label for="second-rate5" title="Amazing">5 stars</label>
+        </fieldset>
+      </div>
+
+      <div class="mb-3">
           <label for="comment" class="form-label">Comments</label>
           <textarea name="review[comment]" id="comment" rows="4" class="form-control" required></textarea>
           <div class="invalid-feedback">
@@ -112,10 +116,18 @@
             <div class="card h-100 shadow-sm">
               <div class="card-body">
                 <h5 class="card-title">@<%=review.author.username%></h5>
+
+                 <p class="starability-result" data-rating=<%= review.rating %>>
+                 
+                </p>
+
                 <p class="card-text"><%= review.comment %></p>
-                <p class="card-text"><%= review.rating %> Stars</p>
+                
+
+               
+
                 <div class="d-flex justify-content-end">
-                  <% if(currentuser &&  currentuser._id.equals(review.author._id)){%>
+                  <% if(currentuser &&  review.author._id.toString()===currentuser._id.toString()){%>
                   <form action="/listings/<%= listing.id %>/reviews/<%= review.id %>?_method=DELETE" method="post">
                     <button class="btn btn-sm btn-dark">Delete</button>
                   </form>
