--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -3,11 +3,164 @@
 
 
 <body>
-    <h3>ALL Listings</h3>  
+    <!-- <h3>ALL Listings</h3>   -->
     <!-- <form action="/listings/new" method="GET">
         <button>submit</button>
     </form>
      -->
+    <style>
+        #filters{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+
+        }
+
+        .filter{
+            text-align: center;
+            margin-right: 2rem;
+            margin-top: 2rem;
+            opacity: 0.7;
+        }
+        .filter:hover{
+            opacity: 1;
+            cursor: pointer;
+        }
+        .filter p{
+            font-size: 0.8rem;
+
+        }
+        .tax-info{
+            display: none;
+        }
+
+        .tax-toggle{
+            border: 1px solid black;
+            border-radius: 1rem;
+            height: 3.5rem;
+            padding: 1rem;
+        }
+
+     
+        i{
+            color:#fe424d;
+        }
+
+        a {
+            color: #fe424d;
+            text-decoration: none;
+        }
+
+    </style>
+
+
+
+    <div id="filters">
+        <!-- <div class="filter">
+            <div><i class="fa-solid fa-fire"></i></div>
+            <p>Trending</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa-solid fa-bed"></i></div>
+            <p>Rooms</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa-solid fa-mountain-city"></i></div>
+            <p>Iconic Cities</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa-solid fa-mountain"></i></div>
+            <p>Mountains</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa-brands fa-fort-awesome"></i></div>
+            <p>Castles</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa-solid fa-person-swimming"></i></div>
+            <p>Amazing Pools</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa-solid fa-campground"></i></div>
+            <p>Camping</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa-solid fa-cow"></i></div>
+            <p>Farms</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa-regular fa-snowflake"></i></div>
+            <p>Arctic</p>
+        </div> -->
+
+
+
+        <a class="filter active" href="/listings">
+        <div><i class="fa-solid fa-house"></i></div>
+        <p>ALL</p>
+      </a>
+      <!-- <a class="filter" href="/listings/filter/Trending">
+        <div><i class="fa-solid fa-fire"></i></div>
+        <p>Trending</p>
+      </a> -->
+      <a class="filter" href="/listings/filter/Iconic cities">
+        <div><i class="fa-solid fa-mountain-city"></i></div>
+        <p>Iconic cities</p>
+      </a>
+      <a class="filter" href="/listings/filter/Mountains">
+        <div><i class="fa-solid fa-mountain"></i></div>
+        <p>Mountains</p>
+      </a>
+      <a class="filter" href="/listings/filter/Castles">
+        <div><i class="fa-brands fa-fort-awesome"></i></div>
+        <p>Castles</p>
+      </a>
+      <a class="filter" href="/listings/filter/Amazing pools">
+        <div><i class="fa-solid fa-person-swimming"></i></div>
+        <p>Amazing pools</p>
+      </a>
+      <a class="filter" href="/listings/filter/Rooms">
+        <div><i class="fa-solid fa-bed"></i></div>
+        <p>Rooms</p>
+      </a>
+      <a class="filter" href="/listings/filter/Camping">
+        <div><i class="fa-solid fa-campground"></i></div>
+        <p>Camping</p>
+      </a>
+      <a class="filter" href="/listings/filter/Farms">
+        <div><i class="fa-solid fa-cow"></i></div>
+        <p>Farms</p>
+      </a>
+      <a class="filter" href="/listings/filter/Arctic">
+        <div><i class="fa-regular fa-snowflake"></i></div>
+        <p>Arctic</p>
+      </a>
+      <a class="filter" href="/listings/filter/Domes">
+        <div><i class="fa-solid fa-igloo"></i></div>
+        <p>Domes</p>
+      </a>
+      <a class="filter" href="/listings/filter/Boats">
+        <div><i class="fa-solid fa-ship"></i></div>
+        <p>Boats</p>
+      </a>
+
+        <div class="tax-toggle">
+            <div class="form-check-reverse form-switch">
+            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Display after total taxes</label>
+            </div>
+        </div>
+    </div>
+
+
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
     <% for(let listing of allListings){ %>
      <a href="/listings/<%=listing.id%>" class="listing-link">
@@ -19,6 +172,8 @@
                  <%=listing.title%>
                 <br> 
                 &#8377;<%=listing.price.toLocaleString("en-IN")%>/night
+
+                <i class="tax-info">&nbsp; &nbsp; +18% Gst</i>
             </p>
         </div>
     </div>
@@ -30,3 +185,22 @@
 
     
 </body>
+
+
+<script>
+    let taxSwitch = document.getElementById("flexSwitchCheckDefault")
+ 
+    taxSwitch.addEventListener('click', ()=>{
+        let taxInfo = document.getElementsByClassName('tax-info')
+        console.log(taxInfo)
+        for(info of taxInfo){
+            if(info.style.display!="inline"){
+                info.style.display = "inline"
+            }
+            else{
+                info.style.display = "none"
+            }
+            
+        }
+    })
+</script>
