--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -2,9 +2,9 @@
     <div class="footer-info">
         <div class="f-info-socials">
 
-            <i class="fa-brands fa-facebook"></i>
-           <i class="fa-brands fa-instagram"></i>
-           <i class="fa-brands fa-linkedin-in"></i>
+            <a href="https://www.linkedin.com/in/dhruvsahu398/"></a><i class="fa-brands fa-facebook"></i></a>
+           <a href="https://www.linkedin.com/in/dhruvsahu398/"><i class="fa-brands fa-instagram"></i></a>
+           <a href="https://www.linkedin.com/in/dhruvsahu398/"><i class="fa-brands fa-linkedin-in"></i></a>
 
         </div>
 
