--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -2,7 +2,7 @@
     <div class="footer-info">
         <div class="f-info-socials">
 
-            <a href="https://www.linkedin.com/in/dhruvsahu398/"></a><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/dhruvsahu398/"><i class="fa-brands fa-facebook"></i></a>
            <a href="https://www.linkedin.com/in/dhruvsahu398/"><i class="fa-brands fa-instagram"></i></a>
            <a href="https://www.linkedin.com/in/dhruvsahu398/"><i class="fa-brands fa-linkedin-in"></i></a>
 
